# gui-agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md
docs/: ARCHITECTURE.md  STARTUP.md
python-backend/: .env  .env.example  .gitignore  langgraph.json  pyproject.toml
python-backend/backend/: main.py  prompt.py  utils.py
python-backend/backend/graph/: __init__.py  workflow.py
python-backend/backend/tools/: __init__.py  browser.py
python-backend/config_files/: application_prod.yaml  application_uat.yaml  application_ver.yaml
